kubernetes/deploy/proxies/internal/adguard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: adguard
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`adguard.vandeneede.org`)
    services:
    - name: adguard
      port: 88
